namespace Entities.DTOs;

public record BookDtoForUpdate : BookDto
{

}